--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="false"
         android:name=".application.SmartApplication"
         android:theme="@style/AppTheme">
         <activity
@@ -22,6 +23,14 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".ui.ScanDeviceActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.DeviceInfoActivity"/>
+
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.DeviceControlActivity"/>
+
         <activity
             android:screenOrientation="portrait"
             android:name=".ui.DeviceSmartConfigActivity"/>
