--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
             android:name=".ui.ScanDeviceActivity"/>
         <activity
             android:screenOrientation="portrait"
+            android:name=".ui.BleCheckControllerActivity"/>
+
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.BleControllerTestActivity"/>
+        <activity
+            android:screenOrientation="portrait"
             android:name=".ui.DeviceInfoActivity"/>
 
         <activity
