--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.Miotlink:IotSmartBluetoothSDK:1.0.2'
+    implementation 'com.github.Miotlink:IotSmartBluetoothSDK:1.0.8'
+    implementation 'com.github.li-xiaojun:XPopup:2.9.19'
+    implementation "com.alibaba:fastjson:1.2.73"
 //    api(name: 'miot-blue-smart-release', ext: 'aar')
     implementation('com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4')
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
